@@ -4,7 +4,6 @@ import java.io.IOException;
 import javafx.application.Platform;
 import javafx.event.ActionEvent;
 import javafx.fxml.Initializable;
-import javafx.scene.control.Button;
 import javafx.scene.control.ListView;
 import javafx.scene.control.TextField;
 
@@ -13,16 +12,15 @@ import java.net.URL;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
+  import java.nio.file.*;
 import java.util.List;
 import java.util.ResourceBundle;
-import java.util.stream.Collectors;
-
 public class ClientController implements Initializable {
     private static final int SOCKET_PORT = 8189;// порт
     public ListView<String> listView;
     public ListView<String> listView1;
     public Path clientDir;
-    public final static String FILE_TO_SEND = "c:/temp/source.pdf"; //Расположение файла
+    public final static String FILE_TO_SEND = "com/example/client/Client_Files"; //Расположение файлов
     public TextField input;
     private IONet net;
 
@@ -34,11 +32,19 @@ public class ClientController implements Initializable {
     private void addMessage(String msg) {Platform.runLater(() -> listView.getItems().add(msg));// обрабатываем сообщение, добовляем в ListView
  }
 
+ private void initClickListener(){
+        listView1.setOnMouseClicked(event ->{
+            if (event.getClickCount()==2) {
+        String item = listView1.getSelectionModel().getSelectedItem();
+        input.setText(item);
+ }
+ });
+}
   private void fillFileView() throws IOException {
         List<String> files = Files.list(clientDir)
-                .map(p -> p.getFileName().toString())
-      .collect(Collectors.toList());
+                .map(p -> p.getFileName().toString()).toList();
       Platform.runLater(() -> listView1.getItems().addAll(files));
+
 
 
     }
@@ -50,12 +56,15 @@ public class ClientController implements Initializable {
     @Override
     public void initialize(URL url, ResourceBundle resourceBundle) { //поднимим сеть
         try {
-            clientDir = Paths.get("Client_Files");
-               fillFileView();
-
-            Socket socket = new Socket("localhost",SOCKET_PORT); //поднимаем сокет
+              Socket socket = new Socket("localhost",SOCKET_PORT); //поднимаем сокет
 
             net = new IONet(this::addMessage, socket); // получение сообщения (call back)
+
+//              
+               clientDir  = Paths.get(FILE_TO_SEND);
+               System.out.println("1 - "+ clientDir.toAbsolutePath()); //проверяем где ищется нужный файл
+                  fillFileView();
+                  initClickListener();
 
         } catch (IOException e) {
             e.printStackTrace();
